--- a/package.json
+++ b/package.json
@@ -5,14 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "tsc --watch -m system --outFile build/game.js js/game.ts",
-    "serve": "autoreload-server -d ./ -p 8000"
+    "develop": "webpack-dev-server --mode development",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "simple-autoreload-server": "^0.2.7",
-    "typescript": "^2.8.1",
-    "vizceral": "^4.6.0"
+    "vizceral": "^4.9.0"
+  },
+  "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
+    "html-webpack-plugin": "^5.5.0",
+    "ts-loader": "^9.4.2",
+    "typescript": "^4.9.4",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
